[Fixes #153] Vertically center caret on list item when facility name wraps

--- a/shared/css/common.scss
+++ b/shared/css/common.scss
@@ -46,13 +46,46 @@ $nav-button-width: 75px;
   border-radius: 6px;
   border: 1px solid #DDD;
   padding: 10px;
-  cursor: pointer; 
+  cursor: pointer;
 }
 
 @mixin border-radius($radius) {
   -webkit-border-radius: $radius;
   -moz-border-radius: $radius;
   border-radius: $radius;
+}
+
+// Flexible box attributes
+
+@mixin align-self($alignment) {
+  align-self: $alignment;
+  -ms-flex-item-align: $alignment;
+  -webkit-align-self: $alignment;
+}
+
+@mixin display-flex {
+  display: flex;
+  display: -ms-flex;
+  display: -webkit-flex;
+}
+
+@mixin flex($options) {
+  flex: $options;
+  -webkit-flex: $options;
+  -moz-flex: $options;
+  -ms-flex: $options;
+}
+
+@mixin flex-direction($direction) {
+  flex-direction: $direction;
+  -ms-flex-direction: $direction;
+  -webkit-flex-direction: $direction;
+}
+
+@mixin order($num) {
+  order: 0;
+  -ms-flex-order: 0;
+  -webkit-order: 0;
 }
 
 // mixin classes
@@ -85,6 +118,26 @@ li {
   .facility {
     border-bottom: solid #9B9B9B 1px;
     padding: 10px;
+
+    .facility-item-link {
+      @include display-flex;
+      @include flex-direction(row);
+
+      .facility-item-box-info {
+        @include flex(1 0 auto);
+        @include order(0);
+      }
+
+      .facility-item-box-caret {
+        @include align-self(center);
+        @include flex(0 1 auto);
+        @include order(1);
+
+        .chevron {
+          margin-top: 0;
+        }
+      }
+    }
   }
 }
 
